# rust

./: .gitignore.txt  README.md
_garage/: Cargo.toml  cancer.csv
_garage/src/: main.rs  main_.rs
book_trpl/: README.md
book_trpl/src/: _42_43_testing.rs  _55_56_iteratos.rs  _57_iterators_vs_loops.rs  _65_deref.rs  _68_69_RefCell.rs  _71_concurrency.rs  _72_channels.rs  _74_send_sync.rs  _84_advanced_traits.rs  main.rs  template.txt
crates/reqwest/: Cargo.toml
crates/reqwest/src/: main.rs
eda_1/: Cargo.toml
eda_1/src/: main.rs
factorial/src/: main.rs
leetcode/buddy_string_859/: Cargo.toml
leetcode/concat_max_sum_1191/: Cargo.toml
leetcode/decompress_list_1313/: Cargo.toml
leetcode/factorial/: Cargo.toml
leetcode/hollow_binay_matrix/: Cargo.toml
leetcode/lucky_number_1380/: Cargo.toml
leetcode/max_product_subarray_152/: Cargo.toml
leetcode/non_decreasing_665/: Cargo.toml
leetcode/number_of_even_number_digits_1295/: Cargo.toml
leetcode/number_smaller_than_after_current_315/: Cargo.toml
leetcode/number_smaller_than_current_1365/: Cargo.toml
leetcode/reverse_int_7/: Cargo.toml
leetcode/stones_jewels_771/: Cargo.toml
leetcode/string_reverse_151/: Cargo.toml
leetcode/subarray_sum_divisible_974/: Cargo.toml
rust_fundamentals/: Cargo.toml  README.md
rust_fundamentals/src/: data_structures.rs  data_types.rs  functions.rs  main.rs  more_structures.rs
tester/: Cargo.toml
tester/src/: main.rs  main_.rs
too_many_linked_list/: Cargo.toml
too_many_linked_list/src/: first.rs  lib.rs  second.rs
trpl/: README.md
trpl/b_a_guessing_game/: Cargo.toml
trpl/b_b_secret_number/: Cargo.toml
trpl/b_c_comparing_numbers/: Cargo.toml
trpl/b_full_n_final/: Cargo.toml
trpl/c_a_variables/: Cargo.toml
trpl/c_b_datatypes/: Cargo.toml
trpl/c_c_functions/: Cargo.toml
trpl/c_d_control_statements/: Cargo.toml
trpl/d_a_ownership/: Cargo.toml
trpl/e_a_structs/: Cargo.toml
trpl/f_a_enums_pattern_matching/: Cargo.toml
trpl/f_b_match/: Cargo.toml
trpl/h_a_collections/: Cargo.toml
trpl/i_a_error_handling/: Cargo.toml
trpl/j_a_generics/: Cargo.toml
trpl/j_b_traits/: Cargo.toml
trpl2/: Cargo.toml  README.md
trpl2/src/: _37_38_generics.rs  (+17 more)
try_out2/: Cargo.toml
try_out3/: Cargo.toml
util/: README.md
util/util_ml/: Cargo.toml  README.md
util/util_ml/data/: data_banknote_authentication.txt  dataset_iris.txt
util/util_ml/src/: lib.rs  lib_matrix.rs  lib_ml.rs  lib_nn.rs  lib_string.rs  lib_ts.rs  main.rs
util_matrix/: Cargo.toml
web_scrapping_1/: Cargo.toml
(+57 files in other folders)
