[package]
name = "web_scrapping_1"
version = "0.1.0"
authors = ["rd2575691 <52597852+rd2575691@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
regex = "1.5.5"