[package]
name = "reqwest"
version = "0.1.0"
authors = ["rd2575691 <52597852+rd2575691@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.6", features = ["blocking","json"]}